--- a/source/index.html
+++ b/source/index.html
@@ -56,4 +56,5 @@
   </main>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="js/calendar.js"></script>
+  <script src="js/main.js"></script>
 </body>
